name:                advent-of-code2022
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.12 && <4.13,
                       text ==1.2.*,
                       containers ==0.6.*,
                       PSQueue ==1.1.*
  exposed-modules:     AdventOfCode,
                       Util,
                       Data.CircularList,
                       Data.Queue,
                       Data.InfMultiSet,
                       Control.Monad.Misc,
                       Algorithms.Dijkstra
  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-01-1
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       advent-of-code2022,
                       text ==1.2.*,
                       parsec ==3.1.*,
                       parsec3-numbers ==0.1.*
  hs-source-dirs:      day-01/assignment-1/
  ghc-options:         -Wall -O2
